--- a/packages/data-source/package.json
+++ b/packages/data-source/package.json
@@ -37,7 +37,7 @@
   },
   "peerDependencies": {
     "@tmagic/core": "workspace:*",
-    "typescript": "*"
+    "typescript": "catalog:"
   },
   "peerDependenciesMeta": {
     "typescript": {
