--- a/packages/stage/package.json
+++ b/packages/stage/package.json
@@ -42,7 +42,7 @@
   },
   "peerDependencies": {
     "@tmagic/core": "workspace:*",
-    "typescript": "*"
+    "typescript": "catalog:"
   },
   "peerDependenciesMeta": {
     "typescript": {
