--- a/packages/design/package.json
+++ b/packages/design/package.json
@@ -42,8 +42,8 @@
     "@popperjs/core": "^2.11.8"
   },
   "peerDependencies": {
-    "vue": ">=3.5.0",
-    "typescript": "*"
+    "vue": "catalog:",
+    "typescript": "catalog:"
   },
   "peerDependenciesMeta": {
     "typescript": {
