--- a/packages/form-schema/package.json
+++ b/packages/form-schema/package.json
@@ -31,7 +31,7 @@
     "@tmagic/schema": "workspace:*"
   },
   "peerDependencies": {
-    "typescript": "*"
+    "typescript": "catalog:"
   },
   "peerDependenciesMeta": {
     "typescript": {
