--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -52,8 +52,8 @@
     "@tmagic/design": "workspace:*",
     "@tmagic/utils": "workspace:*",
     "@tmagic/form-schema": "workspace:*",
-    "vue": ">=3.5.0",
-    "typescript": "*"
+    "vue": "catalog:",
+    "typescript": "catalog:"
   },
   "peerDependenciesMeta": {
     "typescript": {
