--- a/react-components/img/package.json
+++ b/react-components/img/package.json
@@ -21,7 +21,7 @@
     "@tmagic/react-runtime-help": "workspace:^",
     "react": ">=18.3.1",
     "react-dom": ">=18.3.1",
-    "typescript": "*"
+    "typescript": "catalog:"
   },
   "peerDependenciesMeta": {
     "typescript": {
