--- a/runtime/react-runtime-help/package.json
+++ b/runtime/react-runtime-help/package.json
@@ -34,7 +34,7 @@
     "@tmagic/core": ">=1.5.0",
     "@tmagic/stage": ">=1.5.0",
     "react": ">=18.3.1",
-    "typescript": "*"
+    "typescript": "catalog:"
   },
   "peerDependenciesMeta": {
     "@tmagic/core": {
