--- a/runtime/ui/package.json
+++ b/runtime/ui/package.json
@@ -31,7 +31,7 @@
     "@tmagic/vue-text": "workspace:*"
   },
   "peerDependencies": {
-    "typescript": "*"
+    "typescript": "catalog:"
   },
   "peerDependenciesMeta": {
     "typescript": {
