--- a/vue-components/qrcode/package.json
+++ b/vue-components/qrcode/package.json
@@ -22,7 +22,7 @@
     "@tmagic/core": "workspace:^",
     "@tmagic/vue-runtime-help": "workspace:^",
     "@vue/composition-api": ">=1.7.2",
-    "typescript": "*",
+    "typescript": "catalog:",
     "vue": ">=2.6.0 || >=3.5.0"
   },
   "peerDependenciesMeta": {
