--- a/runtime/react/package.json
+++ b/runtime/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "runtime-react",
-  "version": "1.5.24",
+  "version": "1.6.0-beta.0",
   "type": "module",
   "private": true,
   "scripts": {
@@ -19,15 +19,15 @@
     "build:ds:event": "vite build --config build.vite.config.ts --mode ds:event"
   },
   "dependencies": {
-    "@tmagic/core": "1.5.24",
+    "@tmagic/core": "1.6.0-beta.0",
     "@tmagic/react-runtime-help": "0.1.1",
-    "@tmagic/stage": "1.5.24",
+    "@tmagic/stage": "1.6.0-beta.0",
     "axios": "^1.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@tmagic/cli": "1.5.24",
+    "@tmagic/cli": "1.6.0-beta.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-legacy": "^7.0.0",
