--- a/runtime/vue3/package.json
+++ b/runtime/vue3/package.json
@@ -1,6 +1,6 @@
 {
   "name": "runtime-vue3",
-  "version": "1.5.24",
+  "version": "1.6.0-beta.0",
   "type": "module",
   "private": true,
   "scripts": {
@@ -19,14 +19,14 @@
     "build:ds:event": "vite build --config build.vite.config.ts --mode ds:event"
   },
   "dependencies": {
-    "@tmagic/core": "1.5.24",
-    "@tmagic/stage": "1.5.24",
+    "@tmagic/core": "1.6.0-beta.0",
+    "@tmagic/stage": "1.6.0-beta.0",
     "@tmagic/vue-runtime-help": "^1.1.5",
     "axios": "^1.10.0",
     "vue": "catalog:"
   },
   "devDependencies": {
-    "@tmagic/cli": "1.5.24",
+    "@tmagic/cli": "1.6.0-beta.0",
     "@types/node": "^24.0.10",
     "@vitejs/plugin-legacy": "^7.0.0",
     "@vitejs/plugin-vue": "^6.0.0",
