feat(vue-components): 添加页面片容器id prop

--- a/runtime/vue-runtime-help/package.json
+++ b/runtime/vue-runtime-help/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.1.5",
+  "version": "1.2.1",
   "name": "@tmagic/vue-runtime-help",
   "type": "module",
   "sideEffects": false,
@@ -30,8 +30,8 @@
     "vue-demi": "^0.14.10"
   },
   "peerDependencies": {
-    "@tmagic/core": ">=1.5.0",
-    "@tmagic/stage": ">=1.5.0",
+    "@tmagic/core": ">=1.6.0-beta.0",
+    "@tmagic/stage": ">=1.6.0-beta.0",
     "@vue/composition-api": ">=1.7.2",
     "typescript": "catalog:",
     "vue": ">=2.6.0 || >=3.5.0"
