--- a/runtime/react-runtime-help/package.json
+++ b/runtime/react-runtime-help/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.1.1",
+  "version": "0.2.0",
   "name": "@tmagic/react-runtime-help",
   "type": "module",
   "sideEffects": false,
@@ -31,8 +31,8 @@
   },
   "peerDependencies": {
     "lodash-es": "^4.17.21",
-    "@tmagic/core": ">=1.5.0",
-    "@tmagic/stage": ">=1.5.0",
+    "@tmagic/core": ">=1.6.0-beta.0",
+    "@tmagic/stage": ">=1.6.0-beta.0",
     "react": ">=18.3.1",
     "typescript": "catalog:"
   },
