--- a/runtime/ui/package.json
+++ b/runtime/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.5.18",
+  "version": "1.6.0-beta.0",
   "name": "@tmagic/ui",
   "type": "module",
   "main": "dist/tmagic-ui.js",
