--- a/runtime/vue3/package.json
+++ b/runtime/vue3/package.json
@@ -32,7 +32,7 @@
     "@vitejs/plugin-vue": "^6.0.0",
     "@vitejs/plugin-vue-jsx": "^5.0.1",
     "@vue/compiler-sfc": "catalog:",
-    "rollup": "^4.45.0",
+    "rollup": "4.44.1",
     "rollup-plugin-external-globals": "^0.13.0",
     "sass": "^1.89.2",
     "terser": "^ 5.43.1",
