--- a/runtime/vue3/package.json
+++ b/runtime/vue3/package.json
@@ -3,6 +3,9 @@
   "version": "1.6.0-beta.6",
   "type": "module",
   "private": true,
+  "engines": {
+    "node": "^20.19.0 || >=22.12.0"
+  },
   "scripts": {
     "tmagic": "tmagic entry",
     "dev": "vite --config dev.vite.config.ts",
@@ -28,13 +31,13 @@
   "devDependencies": {
     "@tmagic/cli": "1.6.0-beta.6",
     "@types/node": "^24.0.10",
-    "@vitejs/plugin-legacy": "^7.0.0",
-    "@vitejs/plugin-vue": "^6.0.0",
-    "@vitejs/plugin-vue-jsx": "^5.0.1",
+    "@vitejs/plugin-legacy": "^7.2.1",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vitejs/plugin-vue-jsx": "^5.1.0",
     "@vue/compiler-sfc": "catalog:",
     "rollup": "4.44.1",
     "rollup-plugin-external-globals": "^0.13.0",
-    "sass": "^1.89.2",
+    "sass": "^1.91.0",
     "terser": "^ 5.43.1",
     "typescript": "catalog:",
     "vite": "catalog:"
