--- a/runtime/react/package.json
+++ b/runtime/react/package.json
@@ -7,36 +7,33 @@
     "node": "^20.19.0 || >=22.12.0"
   },
   "scripts": {
-    "dev:react": "vite --config dev.vite.config.ts",
-    "dev:playground": "vite --config dev.vite.config.ts",
-    "build": "npm run build:libs && npm run build:page && npm run build:playground",
-    "build:page": "vite build --config build.vite.config.ts --mode page",
-    "build:playground": "vite build --config build.vite.config.ts --mode playground",
-    "build:libs": "tmagic entry && npm run build:config && npm run build:value && npm run build:event && npm run build:ds:libs",
-    "build:ds:libs": "npm run build:ds:config && npm run build:ds:value && npm run build:ds:event",
-    "build:config": "vite build --config build.vite.config.ts --mode config",
-    "build:value": "vite build --config build.vite.config.ts --mode value",
-    "build:event": "vite build --config build.vite.config.ts --mode event",
-    "build:ds:config": "vite build --config build.vite.config.ts --mode ds:config",
-    "build:ds:value": "vite build --config build.vite.config.ts --mode ds:value",
-    "build:ds:event": "vite build --config build.vite.config.ts --mode ds:event"
+    "tmagic": "tmagic entry",
+    "dev:react": "vite --force",
+    "serve": "vite preview",
+    "build": "rimraf ./dist && node scripts/build.mjs --type=all && npm run build:client",
+    "build:libs": "tmagic entry && node scripts/build.mjs --type=res",
+    "build:client": "vite build --config ./page/vite.config.ts && vite build --config ./playground/vite.config.ts"
   },
   "dependencies": {
     "@tmagic/core": "1.6.0-beta.6",
     "@tmagic/react-runtime-help": "0.2.0",
     "@tmagic/stage": "1.6.0-beta.6",
-    "axios": "^1.10.0",
+    "axios": "^1.11.0",
+    "qrcode": "^1.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@tmagic/cli": "1.6.0-beta.6",
+    "@types/fs-extra": "^11.0.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-legacy": "^7.2.1",
     "@vitejs/plugin-react-refresh": "^1.3.6",
+    "fs-extra": "^11.3.1",
     "typescript": "catalog:",
     "terser": "^5.43.1",
-    "vite": "catalog:"
+    "vite": "catalog:",
+    "vite-plugin-commonjs": "^0.10.4"
   }
 }
