--- a/packages/form-schema/package.json
+++ b/packages/form-schema/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.6.0-beta.6",
+  "version": "1.6.0",
   "name": "@tmagic/form-schema",
   "type": "module",
   "main": "dist/tmagic-form-schema.umd.cjs",
