--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.6.0-beta.6",
+  "version": "1.6.0",
   "name": "@tmagic/schema",
   "type": "module",
   "main": "dist/tmagic-schema.umd.cjs",
