--- a/playground/package.json
+++ b/playground/package.json
@@ -15,11 +15,13 @@
     "@tmagic/core": "1.6.1",
     "@tmagic/editor": "1.6.1",
     "@tmagic/element-plus-adapter": "1.6.1",
+    "@tmagic/tdesign-vue-next-adapter": "1.6.1",
     "@tmagic/tmagic-form-runtime": "1.1.3",
     "element-plus": "^2.11.4",
     "lodash-es": "^4.17.21",
     "monaco-editor": "^0.52.2",
     "serialize-javascript": "^6.0.2",
+    "tdesign-vue-next": "^1.17.1",
     "vue": "catalog:",
     "vue-router": "^4.5.1"
   },
