--- a/playground/package.json
+++ b/playground/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tmagic-playground",
-  "version": "1.6.1",
+  "version": "1.7.0-beta.0",
   "type": "module",
   "private": true,
   "scripts": {
@@ -12,10 +12,10 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
-    "@tmagic/core": "1.6.1",
-    "@tmagic/editor": "1.6.1",
-    "@tmagic/element-plus-adapter": "1.6.1",
-    "@tmagic/tdesign-vue-next-adapter": "1.6.1",
+    "@tmagic/core": "1.7.0-beta.0",
+    "@tmagic/editor": "1.7.0-beta.0",
+    "@tmagic/element-plus-adapter": "1.7.0-beta.0",
+    "@tmagic/tdesign-vue-next-adapter": "1.7.0-beta.0",
     "@tmagic/tmagic-form-runtime": "1.1.3",
     "element-plus": "^2.11.4",
     "lodash-es": "^4.17.21",
