--- a/package.json
+++ b/package.json
@@ -40,43 +40,44 @@
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.8.1",
-    "@commitlint/config-conventional": "^19.8.1",
-    "@rollup/plugin-alias": "^5.1.1",
+    "@commitlint/cli": "^20.1.0",
+    "@commitlint/config-conventional": "^20.0.0",
+    "@rollup/plugin-alias": "^6.0.0",
     "@tmagic/eslint-config": "workspace:*",
     "@types/node": "24.0.10",
-    "@vitejs/plugin-vue": "^5.2.3",
-    "@vitest/coverage-v8": "^2.1.9",
+    "@vitejs/plugin-vue": "^6.0.2",
+    "@vitest/coverage-v8": "^4.0.12",
     "@vue/compiler-sfc": "catalog:",
-    "c8": "^7.14.0",
+    "c8": "^10.1.3",
     "commitizen": "^4.3.1",
     "conventional-changelog-cli": "^5.0.0",
-    "cosmiconfig": "^8.3.6",
+    "cosmiconfig": "^ 9.0.0 ",
     "cz-conventional-changelog": "^3.3.0",
-    "element-plus": "^2.11.4",
+    "element-plus": "^2.11.8",
     "enquirer": "^2.4.1",
-    "eslint": "^9.37.0",
-    "execa": "^4.1.0",
+    "eslint": "^9.39.1",
+    "execa": "^9.6.0",
     "highlight.js": "^11.11.1",
     "husky": "^9.1.7",
-    "jsdom": "^19.0.0",
-    "lint-staged": "^16.1.0",
+    "jsdom": "^27.2.0",
+    "lint-staged": "^16.2.7",
     "minimist": "^1.2.8",
     "picocolors": "^1.1.1",
     "prettier": "^3.6.2",
     "recast": "^0.23.11",
     "rimraf": "^3.0.2",
     "rollup": "4.44.1",
-    "rollup-plugin-dts": "^6.2.1",
-    "semver": "^7.7.1",
-    "serialize-javascript": "^6.0.2",
+    "rollup-plugin-dts": "^6.2.3",
+    "sass-embedded": "^1.93.3",
+    "semver": "^7.7.3",
+    "serialize-javascript": "^7.0.0",
     "shx": "^0.3.4",
     "typescript": "catalog:",
     "vite": "catalog:",
     "vitepress": "^1.6.4",
-    "vitest": "^3.2.4",
+    "vitest": "^4.0.12",
     "vue": "catalog:",
-    "vue-tsc": "^3.1.1"
+    "vue-tsc": "^3.1.4"
   },
   "config": {
     "commitizen": {
