fix(element-plus-adapter): 构建时将vue源码构建入目标代码中,导致页面存在多个版本vue

--- a/packages/element-plus-adapter/package.json
+++ b/packages/element-plus-adapter/package.json
@@ -37,6 +37,7 @@
   "peerDependencies": {
     "@tmagic/design": "workspace:*",
     "element-plus": ">=2.9.0",
+    "vue": "catalog:",
     "typescript": "catalog:"
   },
   "peerDependenciesMeta": {
