--- a/packages/data-source/package.json
+++ b/packages/data-source/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.7.0-beta.5",
+  "version": "1.7.0",
   "name": "@tmagic/data-source",
   "type": "module",
   "main": "dist/tmagic-data-source.umd.cjs",
