--- a/packages/dep/package.json
+++ b/packages/dep/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.7.0-beta.5",
+  "version": "1.7.0",
   "name": "@tmagic/dep",
   "type": "module",
   "main": "dist/tmagic-dep.umd.cjs",
