--- a/runtime/vue-runtime-help/package.json
+++ b/runtime/vue-runtime-help/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.2.3",
+  "version": "2.0.0",
   "name": "@tmagic/vue-runtime-help",
   "type": "module",
   "sideEffects": false,
@@ -26,20 +26,13 @@
     "type": "git",
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
-  "dependencies": {
-    "vue-demi": "^0.14.10"
-  },
   "peerDependencies": {
-    "@tmagic/core": ">=1.6.0-beta.0",
-    "@tmagic/stage": ">=1.6.0-beta.0",
-    "@vue/composition-api": ">=1.7.2",
+    "@tmagic/core": ">=1.7.0",
+    "@tmagic/stage": ">=1.7.0",
     "typescript": "catalog:",
-    "vue": ">=2.6.0 || >=3.5.0"
+    "vue": ">=3.5.0"
   },
   "peerDependenciesMeta": {
-    "@vue/composition-api": {
-      "optional": true
-    },
     "@tmagic/core": {
       "optional": true
     },
