--- a/packages/table/package.json
+++ b/packages/table/package.json
@@ -44,6 +44,7 @@
   "peerDependencies": {
     "@tmagic/design": "workspace:*",
     "@tmagic/form": "workspace:*",
+    "@tmagic/utils": "workspace:*",
     "vue": "catalog:",
     "typescript": "catalog:"
   },
